--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-    Hello World!
+    Aloha World!
     <script src="js/app.js"></script>
 </body>
 </html>
